# alphabot_swarm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
3d_printed_parts/: AlphaBot2-Pi_Mount.step  AlphaBot2-Pi_Spacer.step
cmake/: add-cosmos-dependency.cmake  add-sttr2020-dependency.cmake  toolchain-rpi.cmake
docs/design/: README  alphabot_swarm.dsl  alphabot_swarm.json  structurizr.properties
drive/: drive.py  position_commands_client.py
open_cv/: camera_calibration.py
position_commands/: udp_client.py  udp_server.py
scripts/: control_demo.sh
src/: main.py  position_udp_main.py  udp_main.py  vector_udp_main.py
src/agent/: swarm_child.cpp  swarm_controller.cpp  swarm_params.h
src/agent/helpers/: common.h  sph_helper.cpp  sph_helper.h
src/alphabot/: imu_helper.py  position.py  robot.py
src/drive/: keyboard_drive.py  ssh_keyboard_drive.py
src/open_cv/: visual_odom.py
src/position_commands/: ekf_position_commands.py  fix_uwb.py  position_commands.py  udp_client.py
src/position_commands/udp/: ekf_udp_client.py  udp_client.py  udp_server.py
src/position_estimation/: ekf.py  imu.py  raw_imu.py  uwb_kalman_filter.py
src/position_estimation/extended_kalman_filter/: ekf.py
src/position_estimation/imu/: corrected_imu.py  imu.py  madgwick_imu.py
src/position_estimation/imu+uwb/: ekf.py
src/position_estimation/sensor_fusion/: ekf.py
src/position_estimation/uwb/: anchor_debug.py  (+2 more)
src/sensors/: imu.py  madgwick_imu.py  uwb.py
ultra-wideband/: data_feedback.py  ekf_position_feedback.py  kf_position_feedback.py  position_feedback.py
utils/: dwm.py
